# AutoAudit-Sign-Language-to-Legal-Documents

./: .gitignore  README.md  pyproject.toml  read_dataset.py  requirements-train.txt  requirements.txt  test_data.py
bdsllm/: __init__.py  api.py  data.py  inference.py  prompts.py  schema.py  templates.py  train_qlora.py
configs/: default.yaml
data/: sample_fir_dataset.jsonl
examples/: incident_request.json  sign_incidents.jsonl
llm/: .env.example  .gitignore  README.md  convert_excel_to_csv.py  convert_sentence_corpus.py  dataset_utils.py  diagnose_data.py  evaluate.py  infer.py  infer_llm.py  inference.py  inspect_dataset.py  prepare_bangla_dataset.py  prompt_templates.py  requirements-lite.txt  requirements.txt  sign_to_complaint.py  simple_prepare.py  train.py  train_llm.py
llm/api/: __init__.py  app.py
llm/autoaudit_llm/: __init__.py  dataset.py  postprocess.py  prompts.py  schema.py
llm/config/: training_config.yaml
llm/configs/: inference_config.yaml  lora_config.yaml  lora_qlora.yaml  smoke_test.yaml  training_config.yaml
llm/data/: README.md  generate_dataset.py  generate_synthetic_data.py  offense_catalog.py  prepare_dataset.py  sample_train.jsonl  schema.md  seed_dataset.jsonl  seed_examples.jsonl  value_banks.py  vocab.py
llm/notebooks/: fir_llm_exploration.ipynb
llm/scripts/: download_base_model.sh  evaluate.py  generate_data.py  generate_dataset.sh  generate_seed_dataset.py  prepare_dataset.py  run_api.sh  run_training.sh  smoke_test.sh
llm/src/: __init__.py  api.py  data_generation.py  data_prep.py  data_preparation.py  dataset.py  infer.py  (+12 more)
scripts/: generate_complaint.py  prepare_llm_dataset.py
tests/: test_config_and_prompts.py  test_data_generation.py  test_data_pipeline.py  test_dataset.py  test_fir_generation.py  test_inference_and_api.py  test_postprocess.py  test_rule_based.py
(+40 files in other folders)
