[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoaudit-bangla-legal-llm"
version = "0.1.0"
description = "Bangla legal complaint LLM layer for BdSL-to-FIR workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate",
  "bitsandbytes",
  "datasets",
  "fastapi",
  "peft",
  "torch",
  "transformers",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
include = ["bdsllm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
